# Prism

./: CMakeLists.txt
Client/: CMakeLists.txt
Client/src/: client.cpp
Server/: CMakeLists.txt
Server/src/: server.cpp
src/: main.cpp
